--- a/Iphone.htm
+++ b/Iphone.htm
@@ -10,7 +10,7 @@
 
 <body>
 
-<a href="itms-services:///?action=download-manifest&url=https://github.com/janker007/appdownload/app.plist" >
+<a href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/janker007/appdownload/master/app.plist" >
 Click Me To Install IOS APP</a>
 
 </body>
