--- a/Iphone.htm
+++ b/Iphone.htm
@@ -10,8 +10,8 @@
 
 <body>
 
-<a href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/janker007/appdownload/master/app.plist" >
-Click Me To Install IOS APP</a>
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/janker007/appdownload/master/app.plist" >
+Click To Install IOS APP</a>
 
 </body>
 
