--- a/Iphone.htm
+++ b/Iphone.htm
@@ -11,7 +11,7 @@
 <body>
 
 <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/janker007/appdownload/master/app.plist" >
-Click To Install IOS APP</a>
+Click to Install IOS APP</a>
 
 </body>
 
